apps/staging/bazarr/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: bazarr
  annotations:
    cert-manager.io/cluster-issuer: vault-issuer
    cert-manager.io/common-name: bazarr.dev.myrobertson.net
    cert-manager.io/private-key-algorithm: "ECDSA"
spec:
  gatewayClassName: istio
  listeners:
  - name: bazarr
    hostname: bazarr.dev.myrobertson.net
    port: 443
    protocol: HTTPS
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Terminate
      certificateRefs:
      - name: bazarr-cert
  infrastructure:
    labels:
      istio-injection: enabled
    annotations:
      external-dns.alpha.kubernetes.io/hostname: bazarr.dev.myrobertson.net
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bazarr
spec:
  parentRefs:
  - name: bazarr
  hostnames: ["bazarr.dev.myrobertson.net"]
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: bazarr
      port: 6767
