apps/staging/bazarr/httpRoute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bazarr
  namespace: default
spec:
  parentRefs:
  - name: myrobertson-com-gateway
    namespace: default
  hostnames: ["bazarr.staging.myrobertson.net"]
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: bazarr
      port: 6767
